txt-output/21.txt
RAW FILE BEING COMPILED: 
---------------------------------------

module Main where

import Data.Char

-- Problem: max should be maximum
maxLength xs = max (map length xs) + 0           

main :: IO ()
main = putStrLn "hello world"

OUTPUT FROM GHC v 6.10.4: 
---------------------------------------

﻿C:\ghc\ghc-6.10.4\bin\ghc.exe : 
At line:1 char:1
+ C:\ghc\ghc-6.10.4\bin\ghc.exe ill-typed\21.hs *> aLog.txt
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (:String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
ill-typed\21.hs:6:37:
    No instance for (Num ([Int] -> [Int]))
      arising from the literal `0' at ill-typed\21.hs:6:37
    Possible fix:
      add an instance declaration for (Num ([Int] -> [Int]))
    In the second argument of `(+)', namely `0'
    In the expression: max (map length xs) + 0
    In the definition of `maxLength':
        maxLength xs = max (map length xs) + 0


OUTPUT FROM GHC v 9.2.5: 
---------------------------------------

﻿[1 of 1] Compiling Main             ( ill-typed\21.hs, ill-typed\21.o )
C:\ghc\ghc-9.2.5\bin\ghc.exe : 
At line:1 char:1
+ C:\ghc\ghc-9.2.5\bin\ghc.exe ill-typed\21.hs *> bLog.txt
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (:String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
ill-typed\21.hs:6:36: error:
    * Could not deduce (Num ([Int] -> [Int])) arising from a use of `+'
        (maybe you haven't applied a function to enough arguments?)
      from the context: Foldable t
        bound by the inferred type of
                   maxLength :: Foldable t => [t a] -> [Int] -> [Int]
        at ill-typed\21.hs:6:1-38
    * In the expression: max (map length xs) + 0
      In an equation for `maxLength':
          maxLength xs = max (map length xs) + 0
  |
6 | maxLength xs = max (map length xs) + 0           
  |                                    ^
